# dso

./: README.md  rulo
dssoo_fs/: Makefile  crc.c  create_disk  filesystem.c  quijote.txt  test  test.c
dssoo_fs/include/: auxiliary.h  metadata.h
p1_scheduler/: .gitignore  CMakeLists.txt  Makefile  RR.c  RRF.c  RRFN.c  main.c
